# sdi-helper

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  select_batch.ps1
.github/: copilot-instructions.md
config/: agent1_keypoint_priority.json  agent1_keypoint_priority_5kp_no_roof_apex.json  agent1_keypoint_priority_9kp_side.json  queries.yaml  quota.yaml  scrape_exceptions.yaml  sources.yaml  stanford_agent_mapper.yaml  storage.yaml  thresholds.yaml
docs/: SRS.md  agent1-labeling-rules.md  agent1-task-5kp-no-roof-apex.md  annotation-agents-quick-reference.md  b1-annotation-ai-assisted-workflow.md  b1-canonical-verification-log.md  clean-side-300-workflow.md  gcp-gpu-runner-setup.md  geometry.md  keypoint-phases.md  roboflow-annotation-exploration.md  roboflow-setup-checklist.md  roboflow-wheelbox-best-practices.md  side-view-7kp-bumper-validation.md  side-view-model-promotion-checklist.md  stanford-agent-mapper.md
notebooks/: colab_pose_training.ipynb  validation_readiness_test_suite.ipynb
scripts/: build_b1_verification_queue.py  create_quality_batch.py  cron_scrape.ps1  cron_scrape.sh  evaluate_7kp_body_end_model.py  filter_stanford_raw.py  fix_ground_ref.py  generate_queries.py  make_contact_sheet.py  migrate_from_old_pipeline.py  promote_non90_exceptions.py  rebuild_7kp_body_end_labels.py  record_side_view_19kp_promotion.py  remove_agent_schedule.ps1  run_agent1_5kp_no_roof.ps1  run_pipeline.py  run_training_5kp_no_roof.ps1  seed_reference_images.py  setup_agent_schedule.ps1  stage_agent1_quality_subset.py  stage_b1_review_queue.py  (+11 more)
(+1395 files in other folders)
