[tool.poetry]
name = "sdi-helper"
version = "0.1.0"
description = "Image scraping and dataset preparation helper for vehicle SDI training"
authors = ["ML Platform Team"]
packages = [{ include = "sdi_helper" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"
beautifulsoup4 = "^4.12"
opencv-python = "^4.10"
numpy = ">=2.0,<2.1"
torch = "^2.3"
torchvision = ">=0.18"
transformers = "^4.41"
pillow = "^10.0"
selenium = "^4.21"
webdriver-manager = "^4.0"
imagehash = "^4.3"
ultralytics = "^8.2"
pyyaml = "^6.0"
boto3 = "^1.34"
headroom-ai = "^0.21.38"
openai = "^2.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
moto = { extras = ["s3"], version = "^5.0" }
mypy = "^1.10"
ruff = "^0.5"

[tool.poetry.scripts]
sdi-helper = "sdi_helper.interfaces.cli.run_scrape:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (run with -m slow)",
    "integration: end-to-end tests that touch real I/O",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["sdi_helper"]

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
